# drinkAutomat

./: CMakeLists.txt  main.cpp
include/: DrinkSelector.h  PaymentSystem.h  automat.h  baseCoin.h  baseDrink.h  derivedCoins.h  derivedDrink.h  namespaces.h
src/: DrinkSelector.cpp  PaymentSystem.cpp  automat.cpp  baseCoin.cpp  baseDrink.cpp  derivedCoins.cpp  derivedDrink.cpp
test/: coin_test.cpp
